--- a/index.html
+++ b/index.html
@@ -425,10 +425,10 @@
         </div>
     </div>
 
-    <!-- FIREBASE SDK (из CDN) -->
-    <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-database.js"></script>
+    <!-- ========== FIREBASE SDK ЧЕРЕЗ COMPAT (СОВМЕСТИМОСТЬ) ========== -->
+    <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-database-compat.js"></script>
 
     <!-- FIREBASE CONFIG (ГЕНЕРИРУЕТСЯ ИЗ GITHUB SECRETS) -->
     <script src="firebase-config.js"></script>
