--- a/index.html
+++ b/index.html
@@ -425,12 +425,12 @@
         </div>
     </div>
 
-    <!-- ========== FIREBASE SDK ЧЕРЕЗ COMPAT (СОВМЕСТИМОСТЬ) ========== -->
+    <!-- ========== FIREBASE SDK COMPAT (БЕЗ КЛЮЧЕЙ В HTML!) ========== -->
     <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-database-compat.js"></script>
 
-    <!-- FIREBASE CONFIG (ГЕНЕРИРУЕТСЯ ИЗ GITHUB SECRETS) -->
+    <!-- FIREBASE CONFIG - ТОЛЬКО ЗАГЛУШКА, РЕАЛЬНЫЙ СОЗДАЁТСЯ ПРИ ДЕПЛОЕ -->
     <script src="firebase-config.js"></script>
 
     <!-- БИБЛИОТЕКИ -->
