--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-database-compat.js"></script>
 
 <!-- ⭐ FIREBASE CONFIG - ЗАГРУЖАЕМ ПЕРВЫМ! -->
-<script src="./firebase-config.js"></script>
+<script src="/trading-data/firebase-config.js"></script>
     
     <!-- SERVICE WORKER -->
     <script>
