--- a/index.html
+++ b/index.html
@@ -318,6 +318,52 @@
         }, 5000);
         
         console.log('✅ Главный скрипт инициализации загружен');
+        // Страховка - проверяем firebase-config.js
+setTimeout(() => {
+    if (!window.firebaseConfig) {
+        console.error('🚨 КРИТИЧЕСКАЯ ОШИБКА: firebase-config.js не загружен!');
+        
+        const loading = document.getElementById('loading');
+        if (loading) {
+            loading.innerHTML = `
+                <div style="text-align: center; max-width: 600px; padding: 40px;">
+                    <div style="font-size: 4rem; color: #ff4444; margin-bottom: 20px;">🔥</div>
+                    <h2 style="color: #ff4444; margin-bottom: 15px; font-size: 1.8rem;">
+                        Ошибка загрузки конфигурации Firebase
+                    </h2>
+                    <div style="background: rgba(255,68,68,0.1); padding: 20px; border-radius: 10px; 
+                        margin: 20px 0; text-align: left; color: #ccc; font-size: 0.95rem;">
+                        <p><strong>Проблема:</strong> Файл firebase-config.js не найден</p>
+                        <p><strong>Решение:</strong></p>
+                        <ol style="margin: 10px 0 10px 20px;">
+                            <li>Проверьте что GitHub Actions выполнился успешно</li>
+                            <li>Убедитесь что файл создан: <a href="/trading-data/firebase-config.js" target="_blank" style="color: #FFD700;">/trading-data/firebase-config.js</a></li>
+                            <li>Проверьте логи GitHub Actions</li>
+                        </ol>
+                        <p><strong>Ссылки:</strong></p>
+                        <ul style="margin: 10px 0 10px 20px;">
+                            <li><a href="https://github.com/askhat707/trading-data/actions" target="_blank" style="color: #FFD700;">GitHub Actions</a></li>
+                            <li><a href="https://github.com/askhat707/trading-data/settings/secrets/actions" target="_blank" style="color: #FFD700;">GitHub Secrets</a></li>
+                        </ul>
+                    </div>
+                    <div style="display: flex; flex-direction: column; gap: 10px; margin-top: 30px;">
+                        <button onclick="location.reload()" style="padding: 12px 24px; 
+                            background: linear-gradient(135deg, #FFD700, #D4AF37); color: #000; border: none; 
+                            border-radius: 8px; cursor: pointer; font-weight: 800; font-size: 1rem;">
+                            🔄 Перезагрузить страницу
+                        </button>
+                        <button onclick="window.open('https://github.com/askhat707/trading-data/actions', '_blank')" 
+                            style="padding: 12px 24px; background: rgba(33, 150, 243, 0.2); 
+                            color: #2196F3; border: 1px solid #2196F3; border-radius: 8px; 
+                            cursor: pointer; font-weight: 600;">
+                            📊 Проверить GitHub Actions
+                        </button>
+                    </div>
+                </div>
+            `;
+        }
+    }
+}, 3000);
 </script>
 </body>
 </html>
